# sdk

./: .env.anvil.bak.local  .env.anvil.local  .env.sample  .env.testnet.local  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  ENVIRONMENT_SETUP.md  GASLESS_MIGRATION_PLAN.md  LICENSE  README.md  ammit.sh  build.rs  create-token.sh  decimals.md  deny.toml  foundry.toml  install.sh  justfile
.cargo/: audit.toml
.github/workflows/: README.md  ci.yml  release.yml  security-audit.yml
app/: Cargo.toml  build.rs
app/proto/: arborter.proto  arborter_config.proto
app/src/: config.rs  lib.rs
app/src/commands/: mod.rs
app/src/commands/config/: add_market.rs  add_token.rs  deploy_contract.rs  get_config.rs  mod.rs
app/src/commands/trading/: balance.rs  deposit.rs  mod.rs  send_order.rs  withdraw.rs
artifacts/: Midrib.json
artifacts/Context.sol/: Context.json
artifacts/ERC20.sol/: ERC20.json
artifacts/IERC20.sol/: IERC20.json
artifacts/IERC20Metadata.sol/: IERC20Metadata.json
artifacts/btc.sol/: TempToken.json  Token.json
artifacts/draft-IERC6093.sol/: IERC1155Errors.json  IERC20Errors.json  IERC721Errors.json
artifacts/usdc.sol/: Token.json
artifacts/usdt.sol/: Token.json
artifacts/wbtc.sol/: Token.json
aspens/: Cargo.toml  build.rs  build_attestation_paths.rs
aspens-admin/: Cargo.toml
aspens-admin/src/: main.rs
aspens-cli/: Cargo.toml
aspens-cli/src/: main.rs
aspens-cliutil/: Cargo.toml
aspens-cliutil/src/: amount.rs  error.rs  lib.rs
aspens-repl/: Cargo.toml
aspens-repl/src/: main.rs
aspens/artifacts/: IAllowanceTransfer.json  MidribDataTypes.sol  MidribFactory.json  MidribV2.json  MidribV3.json
aspens/examples/: quickstart.rs  transaction_hash_example.rs
aspens/proto/: arborter.proto  arborter_auth.proto  arborter_config.proto  attestation.proto  signer.proto
aspens/src/: chain_client.rs  client.rs  decimals.rs  executor.rs  grpc.rs  health.rs  lib.rs  orders.rs  wallet.rs
aspens/src/commands/: mod.rs
aspens/src/commands/admin/: mod.rs
aspens/src/commands/auth/: mod.rs
aspens/src/commands/config/: mod.rs
aspens/src/commands/trading/: balance.rs  cancel_order.rs  deposit.rs  fce_actions.rs  gasless.rs  mod.rs  send_order.rs  stream_orderbook.rs  stream_trades.rs  withdraw.rs
aspens/src/commands/trading/gasless/: evm.rs  mod.rs  solana.rs
aspens/src/commands/trading/send_order/: display.rs  mod.rs
aspens/src/evm/: mod.rs  rpc.rs
aspens/src/fce/: mod.rs  payloads.rs  proxy.rs  result.rs  wire.rs
aspens/src/solana/: client.rs  mod.rs
aspens/src/tdx_verify/: collateral.rs  dcap.rs  live.rs  mod.rs  reportdata.rs
aspens/tests/: build_attestation_paths.rs  client_parity.rs  send_order_live.rs
cache/: solidity-files-cache.json
contracts/: TempToken.sol  Token.sol  Token.sol.template
docs/: fce-transport-design.md
example/: config.json  config.toml
examples/: README.md  decimal_conversion_examples.sh  quickstart.rs  transaction_hash_example.rs
proto/: arborter.proto  arborter_config.proto  aspn_match.proto
scripts/: ammit-multi-token.sh  ammit.py  ammit.sh  create-token.sh  env-switch.sh  init-config.sh  simulation.py
sdk/: Cargo.toml  build.rs
sdk/proto/: arborter.proto  arborter_config.proto
sdk/src/: lib.rs
sdk/src/commands/: mod.rs
sdk/src/commands/config/: mod.rs
sdk/src/commands/trading/: balance.rs  deposit.rs  send_order.rs  withdraw.rs
src/: main.rs
src/commands/: balance.rs  deposit.rs  get_balance.rs  mod.rs  send_order.rs  withdraw.rs
src/commands/config/: add_market.rs  add_token.rs  deploy_contract.rs  get_config.rs  mod.rs
src/commands/trading/: balance.rs  deposit.rs  mod.rs  send_order.rs  withdraw.rs
test/: config.json  config.toml
wrappers/: Cargo.toml
wrappers/src/utils/: mod.rs  wrap_admin.rs  wrap_trader.rs
