[workspace]
resolver = "2"
members = [
    "aspens",
    "aspens-cli",
    "aspens-repl",
    "aspens-admin",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/aspensprotocol/sdk"

[workspace.dependencies]
# Blockchain & Ethereum
alloy = { version = "1.5.1", default-features = false, features = ["contract", "network", "providers", "reqwest", "reqwest-rustls-tls", "rpc-types", "signer-local", "signers", "sol-types"] }
alloy-chains = "0.2.28"
alloy-contract = "1.5.1"
alloy-sol-types = { version = "1.5.1", features = ["json"] }

# gRPC & Protobuf
tonic = { version = "0.14.2", default-features = false, features = ["codegen", "transport", "tls-native-roots", "tls-ring"] }
tonic-reflection = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.3"

# Async runtime
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"

# CLI (only for binaries)
clap = { version = "4.5.54", features = ["derive"] }
clap-repl = "0.3.2"
clap-verbosity = "2.1.0"

# Utilities
eyre = "0.6"
hex = "0.4.3"
url = "2.5.8"
comfy-table = "7.2.2"
chrono = "0.4"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Build dependencies
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"

# Dev dependencies
tempfile = "3.24.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
