[workspace]
resolver = "2"
members = [
    "aspens",
    "aspens-cli",
    "aspens-repl",
    "aspens-admin",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/aspensprotocol/sdk"

[workspace.dependencies]
# Blockchain & Ethereum
alloy = { version = "1.8.3", default-features = false, features = ["contract", "network", "providers", "reqwest", "reqwest-rustls-tls", "rpc-types", "signer-local", "signers", "sol-types"] }
# Direct sub-crate deps for lean signing builds (no provider / transport /
# rpc-client machinery). The `alloy` umbrella stays behind the `client`
# feature for call sites that need RPC.
alloy-primitives = "1.5.7"
alloy-signer = "1.8.3"
alloy-signer-local = "1.8.3"
alloy-chains = "0.2.30"
alloy-contract = "1.8.3"
alloy-sol-types = { version = "1.5.7", features = ["json"] }

# Solana
solana-sdk = "3"
solana-client = "3.1"
# Pin solana-keypair to <3.1.1 — 3.1.1+ has a build error from a five8
# DecodeError that doesn't impl std::error::Error. Bump when upstream fixes it.
solana-keypair = "=3.0.1"
bs58 = "0.5"
ed25519-dalek = "2"
borsh = { version = "1.5", features = ["derive"] }
sha2 = "0.10"

# gRPC & Protobuf
tonic = { version = "0.14.5", default-features = false, features = ["codegen", "transport", "tls-native-roots", "tls-ring"] }
tonic-reflection = "0.14.5"
tonic-prost = "0.14.5"
prost = "0.14.3"

# Async runtime
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = "1.0.7+spec-1.1.0"

# CLI (only for binaries)
clap = { version = "4.6.0", features = ["derive"] }
clap-repl = "0.3.2"
clap-verbosity = "2.1.0"

# Utilities
eyre = "0.6"
hex = "0.4.3"
url = "2.5.8"
comfy-table = "7.2.2"
chrono = "0.4"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Build dependencies
tonic-build = "0.14.5"
tonic-prost-build = "0.14.5"

# Dev dependencies
tempfile = "3.27.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
