[workspace]
resolver = "2"
members = [
    "aspens",
    "aspens-cli",
    "aspens-cliutil",
    "aspens-repl",
    "aspens-admin",
]

[workspace.package]
version = "0.6.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/aspensprotocol/sdk"
description = "Aspens crosschain trading SDK"
readme = "README.md"

[workspace.dependencies]
# Blockchain & Ethereum
alloy = { version = "2.0.5", default-features = false, features = ["contract", "network", "providers", "reqwest", "reqwest-rustls-tls", "rpc-types", "signer-local", "signers", "sol-types"] }
# Direct sub-crate deps for lean signing builds (no provider / transport /
# rpc-client machinery). The `alloy` umbrella stays behind the `client`
# feature for call sites that need RPC.
alloy-primitives = "1.6.0"
alloy-signer = "2.0.5"
alloy-signer-local = "2.0.4"
alloy-chains = "0.2.34"
alloy-contract = "2.0.5"
alloy-sol-types = { version = "1.6.0", features = ["json"] }

# Solana
solana-sdk = "3"
# solana-sdk 4.x is out, but solana-client 4.x is still beta and the mixed
# solana-transaction 3/4 types fail to implement SerializableTransaction.
# Move both together once solana-client 4.0 goes stable.
solana-client = "3.1"
solana-keypair = "3.1"
bs58 = "0.5"
ed25519-dalek = "2"
borsh = { version = "1.6.1", features = ["derive"] }
sha2 = "0.11"
# DCAP quote verification (TDX). `ring` crypto backend + `default-x509` for the
# PCK cert-chain parsing; NO `report`/`reqwest` — collateral is supplied to the
# verifier, not fetched here. Behind the optional `dcap` feature.
#
# `ring` (not `rustcrypto`): the rustcrypto webpki backend pulls `rsa`, which
# carries RUSTSEC-2023-0071 (Marvin timing attack) with no fixed release. That CVE
# is about RSA *private-key* timing and Intel's SGX/TDX PKI is all-ECDSA, so it's
# unreachable for a verifier — but `ring` (already in our tree via tonic/solana)
# verifies the chain without pulling `rsa` at all, so we drop the crate outright.
dcap-qvl = { version = "0.5.2", default-features = false, features = ["ring", "default-x509", "std"] }
# Collateral fetching (the `dcap-fetch` feature). dcap-qvl's own fetcher is locked
# behind its `report` feature, which forces reqwest 0.13 + `hickory-dns` (needs the
# unresolvable prerelease `hickory-resolver 0.26`); so we drive the PCS/PCCS REST
# API ourselves over the SDK's rustls reqwest 0.12 (unifies with alloy's) and
# assemble `QuoteCollateralV3` directly. asn1_der mirrors dcap's FMSPC extension
# walk; pem splits the PCK chain; urlencoding decodes issuer-chain headers.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
asn1_der = "0.7"
pem = "3"
urlencoding = "2"

# gRPC & Protobuf
tonic = { version = "0.14.6", default-features = false, features = ["codegen", "transport", "tls-native-roots", "tls-ring"] }
tonic-reflection = "0.14.6"
tonic-prost = "0.14.6"
prost = "0.14.4"

# Async runtime
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = "1.1.2"

# CLI (only for binaries)
clap = { version = "4.6.1", features = ["derive"] }
clap-repl = "0.3.2"
clap-verbosity = "2.1.0"

# Utilities
eyre = "0.6"
hex = "0.4.3"
# OS CSPRNG — the CLI uses it to mint a fresh anti-replay nonce for
# verify-attestation when one isn't supplied.
getrandom = "0.3"
url = "2.5.8"
comfy-table = "7.2.2"
chrono = "0.4"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Build dependencies
tonic-build = "0.14.6"
tonic-prost-build = "0.14.6"

# Dev dependencies
tempfile = "3.27.0"

[profile.release]
opt-level = 3
# LTO disabled because Apple's ld64 libLTO (Xcode ~17) can't parse the
# LLVM 21 bitcode rustc 1.94 emits ("Unknown attribute kind (102)"
# linker error). Re-enable — likely as `lto = "thin"` — once either
# Xcode ships a newer libLTO or we pin the build to a toolchain whose
# bitcode format matches the target's system linker.
lto = false
codegen-units = 1
