[package]
name = "aspens"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aspens-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "aspens-repl"
path = "src/bin/repl.rs"

[dependencies]
alloy = { version = "0.13", default-features = false, features = ["contract", "network", "providers", "reqwest", "signer-local", "signers"] }
alloy-chains = "0.1.68"
alloy-contract = "0.13"
# alloy-signer-local = "0.11"
alloy-sol-types = { version = "0.8.25", features = ["json"] }
anyhow = "1.0"
clap = { version = "4.5.34", features = ["derive"] }
clap-repl = "0.3.2"
clap-verbosity = "2.1.0"
comfy-table = "7.1.4"
dotenv = "0.15.0"
hex = "0.4.3"
prost = "0.13.5"
serde_json = "1.0"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
tonic = { version = "0.13.0", default-features = false, features = ["codegen", "prost", "transport"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.2"

[build-dependencies]
tonic-build = "0.13.0"
