[package]
name = "aspens-admin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Admin CLI for an Aspens Market Stack"
publish = false

[[bin]]
name = "aspens-admin"
path = "src/main.rs"

[dependencies]
# Core library — features declared explicitly so changes to aspens'
# default features don't silently affect this binary.
aspens = { path = "../aspens", default-features = false, features = ["client", "trader", "evm", "solana", "formatting", "admin"] }

# CLI dependencies
clap = { workspace = true, features = ["env"] }
clap-verbosity.workspace = true

# Async runtime
tokio.workspace = true

# Error handling
eyre.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
url.workspace = true
serde_json.workspace = true
chrono.workspace = true

# Crypto for wallet address derivation
alloy.workspace = true
hex.workspace = true
comfy-table.workspace = true
