[package]
name = "aspens-repl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "aspens-repl"
path = "src/main.rs"

[dependencies]
# Local dependencies — features declared explicitly so changes to the
# aspens crate's default features don't silently affect this binary.
aspens = { path = "../aspens", default-features = false, features = ["client", "trader", "evm", "solana", "formatting"] }
aspens-cliutil = { path = "../aspens-cliutil" }

# Workspace dependencies
alloy.workspace = true
alloy-chains.workspace = true
eyre.workspace = true
clap.workspace = true
clap-repl.workspace = true
hex.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[features]
default = []
admin = ["aspens/admin"]
