[package]
name = "aspens"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
alloy.workspace = true
alloy-chains.workspace = true
alloy-contract.workspace = true
alloy-sol-types.workspace = true
solana-sdk = { workspace = true, optional = true }
solana-client = { workspace = true, optional = true }
# Pin transitive solana-keypair to avoid the buggy 3.1.1+ releases
solana-keypair = { workspace = true, optional = true }
bs58 = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }
borsh = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
eyre.workspace = true
hex.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tonic.workspace = true
tonic-reflection.workspace = true
tonic-prost.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
futures.workspace = true

# Optional: formatting support
comfy-table = { workspace = true, optional = true }

[features]
default = ["trader", "formatting", "solana"]
trader = []
admin = []
formatting = ["comfy-table"]
# Optional: enable Solana wallet + chain support. Pulls in solana-sdk,
# solana-client, ed25519-dalek, bs58, borsh, sha2. EVM-only consumers can
# disable the default and skip these deps.
solana = [
    "dep:solana-sdk",
    "dep:solana-client",
    "dep:solana-keypair",
    "dep:bs58",
    "dep:ed25519-dalek",
    "dep:borsh",
    "dep:sha2",
]

[build-dependencies]
tonic-build.workspace = true
tonic-prost-build.workspace = true

[dev-dependencies]
tempfile.workspace = true
