[package]
name = "aspens"
version = "0.2.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.25", default-features = false, features = ["contract", "network", "providers", "reqwest", "signer-local", "signers"] }
alloy-chains = "0.2.2"
alloy-contract = "1.0.25"
# alloy-signer-local = "0.11"
alloy-sol-types = { version = "1.3.1", features = ["json"] }
anyhow = "1.0"
clap = { version = "4.5.45", features = ["derive"] }
clap-repl = "0.3.2"
clap-verbosity = "2.1.0"
comfy-table = "7.1.4"
dotenv = "0.15.0"
hex = "0.4.3"
prost = "0.14.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
toml = "0.9.5"
tonic = { version = "0.14.1", default-features = false, features = ["codegen", "transport"] }
tonic-prost = "0.14.1" 
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.4"

[features]
default = ["trader"]
trader = []
admin = []

[build-dependencies]
tonic-build = "0.14.1"
tonic-prost-build = "0.14.1"

[dev-dependencies]
tempfile = "3.20.0"
